added temperature and weather icon

--- a/calendar.css
+++ b/calendar.css
@@ -61,6 +61,10 @@ button {
   }
 }
 
+.intromessage {
+  font-size: 10px;
+}
+
 body {
   background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(124,124,170,1) 48%, rgba(0,255,199,1) 100%);
