--- a/calendar.css
+++ b/calendar.css
@@ -327,3 +327,8 @@ body {
     justify-content: center;
   }
 }
+
+.zen {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
