--- a/index.css
+++ b/index.css
@@ -298,3 +298,8 @@ a{
 .letter-image:hover .shadow {
     width: 250px;
 } 
+
+.zen {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
