--- a/index.css
+++ b/index.css
@@ -382,7 +382,7 @@ a{
     width: 250px;
 } 
 
-.zen {
+/* #zen {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
+} */
