--- a/index.css
+++ b/index.css
@@ -331,7 +331,13 @@ a{
     width: 250px;
 } 
 
-/* #zen {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-} */
+
+#textArea{
+  background: url(images/notebook.png) repeat-y;
+  width: 600px;
+  height: 300px;
+  font: normal 14px verdana;
+  line-height: 25px;
+  padding: 2px 10px;
+  border: solid 1px #ddd;
+}
