--- a/index.css
+++ b/index.css
@@ -1,99 +1,106 @@
-*, *::after, *::before {
-    box-sizing: border-box;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+body,
+.wrapper {
+  background-image: linear-gradient(to right, #054f7d, #00a7cf, #861a54, #054f7d);
+  background-size: 600%;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+  animation-name: gradients;
+}
+
+@media (max-width: 830px) {}
+
+@keyframes gradients {
+  0% {
+    background-position: 0 0;
   }
 
- body,.wrapper {
-    background-image: linear-gradient(to right, #054f7d, #00a7cf, #861a54, #054f7d);
-    background-size: 600%;
-    animation-duration: 20s;
-    animation-iteration-count: infinite;
-    animation-name: gradients;
- }
+  25% {
+    background-position: 50% 0;
+  }
 
-  @media (max-width: 830px) {
-   
- }
-  @keyframes gradients {
-    0% {
-      background-position: 0 0;
-   }
-    25% {
-      background-position: 50% 0;
-   }
-    50% {
-      background-position: 90% 0;
-   }
-    60% {
-      background-position: 60%;
-   }
-    75% {
-      background-position: 40%;
-   }
-    100% {
-      background-position: 0 0;
-   }
- }
-  
-  .form {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    transition: 200ms ease-in-out;
-    border: 1px solid black;
-    border-radius: 10px;
-    z-index: 10;
-    background-color: white;
-    width: 500px;
-    max-width: 80%;
+  50% {
+    background-position: 90% 0;
   }
-  
-  .form.active {
-    transform: translate(-50%, -50%) scale(1);
+
+  60% {
+    background-position: 60%;
   }
-  
-  .form-header {
-    padding: 10px 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid black;
+
+  75% {
+    background-position: 40%;
   }
-  
-  .form-header .title {
-    font-size: 1.25rem;
-    font-weight: bold;
+
+  100% {
+    background-position: 0 0;
   }
-  
-  .form-header .close-button {
-    cursor: pointer;
-    border: none;
-    outline: none;
-    background: none;
-    font-size: 1.25rem;
-    font-weight: bold;
-  }
-  
-  .form-body {
-    padding: 10px 15px;
-  }
-  
-  #overlay {
-    position: fixed;
-    opacity: 0;
-    transition: 200ms ease-in-out;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, .5);
-    pointer-events: none;
-  }
-  
-  #overlay.active {
-    opacity: 1;
-    pointer-events: all;
-  }
+}
+
+.form {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 200ms ease-in-out;
+  border: 1px solid black;
+  border-radius: 10px;
+  z-index: 10;
+  background-color: white;
+  width: 500px;
+  max-width: 80%;
+}
+
+.form.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.form-header {
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+}
+
+.form-header .title {
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.form-header .close-button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.form-body {
+  padding: 10px 15px;
+}
+
+#overlay {
+  position: fixed;
+  opacity: 0;
+  transition: 200ms ease-in-out;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .5);
+  pointer-events: none;
+}
+
+#overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
 
 
 /* clock */
@@ -102,12 +109,12 @@
   position: absolute;
   right: 0;
   top: 0;
-    max-width: 600px;
-    /* border: 20px; */
-    border-style: solid;
+  max-width: 600px;
+  /* border: 20px; */
+  border-style: solid;
   border-width: 5px;
   color: #fff;
-  background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
   /* font-family: "Segoe UI", sans-serif; */
   width: 340px;
   padding: 15px 10px;
@@ -119,15 +126,19 @@
 
 /* for smaller screens below 700px */
 @media only screen and (max-width: 700px) {
-  body {font-size: 1.8rem;}
+  body {
+    font-size: 1.8rem;
+  }
 }
 
 /*for smaller screens below 300px*/
 @media only screen and (max-width: 300px) {
-  body {font-size: 1.6rem;} 
+  body {
+    font-size: 1.6rem;
+  }
 }
 
-#clock:hover{
+#clock:hover {
   background-image: linear-gradient(to right, #054f7d, #00a7cf, #861a54, #054f7d);
   background-size: 600%;
   animation-duration: 20s;
@@ -135,7 +146,7 @@
   animation-name: gradients;
 }
 
-#date-time{
+#date-time {
   font-size: 15px;
   font-weight: 600;
   text-align: center;
@@ -150,6 +161,7 @@
 body {
   background: #323641;
 }
+
 .letter-image {
   position: absolute;
   top: 50%;
@@ -161,6 +173,7 @@ body {
   transform: translate(-50%, -50%);
   cursor: pointer;
 }
+
 .animated-mail {
   position: absolute;
   height: 150px;
@@ -169,6 +182,7 @@ body {
   -moz-transition: 0.4s;
   transition: 0.4s;
 }
+
 .animated-mail .body {
   position: absolute;
   bottom: 0;
@@ -179,6 +193,7 @@ body {
   border-color: transparent transparent #e95f55 transparent;
   z-index: 2;
 }
+
 .animated-mail .top-fold {
   position: absolute;
   top: 50px;
@@ -195,6 +210,7 @@ body {
   border-color: #cf4a43 transparent transparent transparent;
   z-index: 2;
 }
+
 .animated-mail .back-fold {
   position: absolute;
   bottom: 0;
@@ -203,6 +219,7 @@ body {
   background: #cf4a43;
   z-index: 0;
 }
+
 .animated-mail .left-fold {
   position: absolute;
   bottom: 0;
@@ -213,6 +230,7 @@ body {
   border-color: transparent transparent transparent #e15349;
   z-index: 2;
 }
+
 .animated-mail .letter {
   left: 20px;
   bottom: 0px;
@@ -226,11 +244,13 @@ body {
   -moz-transition: 0.4s 0.2s;
   transition: 0.4s 0.2s;
 }
+
 .animated-mail .letter .letter-border {
   height: 10px;
   width: 100%;
   background: repeating-linear-gradient(-45deg, #cb5a5e, #cb5a5e 8px, transparent 8px, transparent 18px);
 }
+
 .animated-mail .letter .letter-title {
   margin-top: 10px;
   margin-left: 5px;
@@ -238,6 +258,7 @@ body {
   width: 40%;
   background: #cb5a5e;
 }
+
 .animated-mail .letter .letter-context {
   margin-top: 10px;
   margin-left: 5px;
@@ -245,6 +266,7 @@ body {
   width: 20%;
   background: #cb5a5e;
 }
+
 .animated-mail .letter .letter-stamp {
   margin-top: 30px;
   margin-left: 120px;
@@ -254,6 +276,7 @@ body {
   background: #cb5a5e;
   opacity: 0.3;
 }
+
 .shadow {
   position: absolute;
   top: 200px;
@@ -269,11 +292,13 @@ body {
   border-radius: 100%;
   background: radial-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0));
 }
+
 .letter-image:hover .animated-mail {
   transform: translateY(50px);
   -webkit-transform: translateY(50px);
   -moz-transform: translateY(50px);
 }
+
 .letter-image:hover .animated-mail .top-fold {
   transition: transform 0.4s, z-index 0.2s;
   transform: rotateX(180deg);
@@ -283,30 +308,18 @@ body {
   -moz-transform: rotateX(180deg);
   z-index: 0;
 }
+
 .letter-image:hover .animated-mail .letter {
   height: 180px;
 }
+
 .letter-image:hover .shadow {
   width: 250px;
 }
+
 /* textarea */
 .paper {
   background: url(notebook.png) repeat-y;
-width: 600px;
-height: 300px;
-font: normal 14px verdana;
-line-height: 25px;
-padding: 2px 10px;
-border: solid 1px #ddd;
-}
-/* textarea end*/
-
-
-/* brain dump start end */
-
-
-#textArea{
-  background: url(images/notebook.png) repeat-y;
   width: 600px;
   height: 300px;
   font: normal 14px verdana;
@@ -315,4 +328,18 @@ border: solid 1px #ddd;
   border: solid 1px #ddd;
 }
 
+/* textarea end*/
 
+
+/* brain dump start end */
+
+
+#textArea {
+  background: url(images/notebook.png) repeat-y;
+  width: 600px;
+  height: 300px;
+  font: normal 14px verdana;
+  line-height: 25px;
+  padding: 2px 10px;
+  border: solid 1px #ddd;
+}
