--- a/dolist.css
+++ b/dolist.css
@@ -1,23 +1,109 @@
-.gradient-custom-2 {
-    /* fallback for old browsers */
-    background: #7e40f6;
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Lato:ital,wght@0,300;0,400;1,300;1,400&display=swap");
 
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right,
-            rgba(126, 64, 246, 1),
-            rgba(80, 139, 252, 1));
-
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right,
-            rgba(126, 64, 246, 1),
-            rgba(80, 139, 252, 1));
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  user-select: none;
 }
 
-.mask-custom {
-    background: rgba(24, 24, 16, 0.2);
-    border-radius: 2em;
-    backdrop-filter: blur(25px);
-    border: 2px solid rgba(255, 255, 255, 0.05);
-    background-clip: padding-box;
-    box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #f5f5f5;
+  font-family: "Lato", sans-serif;
+}
+
+#app {
+  width: 50%;
+  min-width: 400px;
+}
+
+h1 {
+  font-family: "Dancing Script", cursive;
+  text-align: center;
+  margin-bottom: 50px;
+  font-size: 45px;
+  color: #335c62;
+  font-weight: 700;
+}
+
+p {
+  font-family: "Dancing Script", cursive;
+  text-align: center;
+  margin-top: 30px;
+  font-size: 30px;
+  color: #5c5c5c;
+  font-weight: 300;
+}
+
+ul {
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: italic;
+  margin: 50px;
+}
+
+ul li {
+  margin-bottom: 10px;
+  color: #5c5c5c;
+}
+
+ul li a {
+  margin-left: 15px;
+  color: white;
+  cursor: pointer;
+  border: 1px solid #7cbe7b;
+  border-radius: 5px;
+  padding: 0 15px 2px 15px;
+  background-color: #7cbe7b;
+}
+
+ul li a:hover {
+  opacity: 0.8;
+}
+
+input,
+button {
+  font: 400 20px "Lato", sans-serif;
+}
+
+input {
+  width: 60%;
+  height: 40px;
+  color: #5c5c5c;
+  border: 1px solid #dcdce6;
+  border-radius: 8px;
+  padding: 0 24px;
+  margin-right: 10px;
+}
+
+.btn_add {
+  width: 30%;
+  height: 40px;
+  border: 1px solid #dcdce6;
+  border-radius: 8px;
+  background-color: #59a2ad;
+  color: #fff;
+  cursor: pointer;
+}
+
+.btn_add:hover {
+  opacity: 0.9;
 }
