--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
 
 body,
 .wrapper {
+  
   background-image: linear-gradient(to right, #054f7d, #00a7cf, #861a54, #054f7d);
   background-size: 600%;
   animation-duration: 20s;
@@ -41,49 +42,6 @@ body,
   }
 }
 
-.form {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(0);
-  transition: 200ms ease-in-out;
-  border: 1px solid black;
-  border-radius: 10px;
-  z-index: 10;
-  background-color: white;
-  width: 500px;
-  max-width: 80%;
-}
-
-.form.active {
-  transform: translate(-50%, -50%) scale(1);
-}
-
-.form-header {
-  padding: 10px 15px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid black;
-}
-
-.form-header .title {
-  font-size: 1.25rem;
-  font-weight: bold;
-}
-
-.form-header .close-button {
-  cursor: pointer;
-  border: none;
-  outline: none;
-  background: none;
-  font-size: 1.25rem;
-  font-weight: bold;
-}
-
-.form-body {
-  padding: 10px 15px;
-}
 
 #overlay {
   position: fixed;
@@ -103,7 +61,7 @@ body,
 }
 
 
-/* clock */
+/* clock start ----------------->*/
 
 #clock {
   position: absolute;
@@ -153,188 +111,114 @@ body,
   letter-spacing: 3px;
 }
 
-
-/* clock end */
-
-
-/* brain dump start */
-body {
-  background: #323641;
-}
-
-.letter-image {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 200px;
-  height: 200px;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  cursor: pointer;
-}
-
-.animated-mail {
-  position: absolute;
-  height: 150px;
-  width: 200px;
-  -webkit-transition: 0.4s;
-  -moz-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.animated-mail .body {
-  position: absolute;
-  bottom: 0;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 0 0 100px 200px;
-  border-color: transparent transparent #e95f55 transparent;
-  z-index: 2;
-}
-
-.animated-mail .top-fold {
-  position: absolute;
-  top: 50px;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 50px 100px 0 100px;
-  -webkit-transform-origin: 50% 0%;
-  -webkit-transition: transform 0.4s 0.4s, z-index 0.2s 0.4s;
-  -moz-transform-origin: 50% 0%;
-  -moz-transition: transform 0.4s 0.4s, z-index 0.2s 0.4s;
-  transform-origin: 50% 0%;
-  transition: transform 0.4s 0.4s, z-index 0.2s 0.4s;
-  border-color: #cf4a43 transparent transparent transparent;
-  z-index: 2;
-}
-
-.animated-mail .back-fold {
-  position: absolute;
-  bottom: 0;
-  width: 200px;
-  height: 100px;
-  background: #cf4a43;
-  z-index: 0;
-}
-
-.animated-mail .left-fold {
-  position: absolute;
-  bottom: 0;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 50px 0 50px 100px;
-  border-color: transparent transparent transparent #e15349;
-  z-index: 2;
-}
-
-.animated-mail .letter {
-  left: 20px;
-  bottom: 0px;
-  position: absolute;
-  width: 160px;
-  height: 60px;
-  background: white;
-  z-index: 1;
-  overflow: hidden;
-  -webkit-transition: 0.4s 0.2s;
-  -moz-transition: 0.4s 0.2s;
-  transition: 0.4s 0.2s;
-}
-
-.animated-mail .letter .letter-border {
-  height: 10px;
-  width: 100%;
-  background: repeating-linear-gradient(-45deg, #cb5a5e, #cb5a5e 8px, transparent 8px, transparent 18px);
-}
-
-.animated-mail .letter .letter-title {
-  margin-top: 10px;
-  margin-left: 5px;
-  height: 10px;
-  width: 40%;
-  background: #cb5a5e;
-}
-
-.animated-mail .letter .letter-context {
-  margin-top: 10px;
-  margin-left: 5px;
-  height: 10px;
-  width: 20%;
-  background: #cb5a5e;
-}
-
-.animated-mail .letter .letter-stamp {
-  margin-top: 30px;
-  margin-left: 120px;
-  border-radius: 100%;
-  height: 30px;
-  width: 30px;
-  background: #cb5a5e;
-  opacity: 0.3;
-}
-
-.shadow {
-  position: absolute;
-  top: 200px;
-  left: 50%;
-  width: 400px;
-  height: 30px;
-  transition: 0.4s;
-  transform: translateX(-50%);
-  -webkit-transition: 0.4s;
-  -webkit-transform: translateX(-50%);
-  -moz-transition: 0.4s;
-  -moz-transform: translateX(-50%);
-  border-radius: 100%;
-  background: radial-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0));
-}
-
-.letter-image:hover .animated-mail {
-  transform: translateY(50px);
-  -webkit-transform: translateY(50px);
-  -moz-transform: translateY(50px);
-}
-
-.letter-image:hover .animated-mail .top-fold {
-  transition: transform 0.4s, z-index 0.2s;
-  transform: rotateX(180deg);
-  -webkit-transition: transform 0.4s, z-index 0.2s;
-  -webkit-transform: rotateX(180deg);
-  -moz-transition: transform 0.4s, z-index 0.2s;
-  -moz-transform: rotateX(180deg);
-  z-index: 0;
-}
-
-.letter-image:hover .animated-mail .letter {
-  height: 180px;
-}
-
-.letter-image:hover .shadow {
-  width: 250px;
-}
-
-/* textarea */
-.paper {
-  background: url(notebook.png) repeat-y;
-  width: 600px;
-  height: 300px;
-  font: normal 14px verdana;
-  line-height: 25px;
-  padding: 2px 10px;
-  border: solid 1px #ddd;
-}
-
-/* textarea end*/
+/* clock end -----------------> */
 
 
-/* brain dump start end */
+/* brain dump start ----------------->*/
+*, *::after, *::before {
+    box-sizing: border-box;
+  }
+
+ section,.wrapper {
+    background-image: linear-gradient(to right, #054f7d, #00a7cf, #861a54, #054f7d);
+    background-size: 600%;
+    animation-duration: 20s;
+    animation-iteration-count: infinite;
+    animation-name: gradients;
+ }
+
+  @media (max-width: 830px) {
+   
+ }
+  @keyframes gradients {
+    0% {
+      background-position: 0 0;
+   }
+    25% {
+      background-position: 50% 0;
+   }
+    50% {
+      background-position: 90% 0;
+   }
+    60% {
+      background-position: 60%;
+   }
+    75% {
+      background-position: 40%;
+   }
+    100% {
+      background-position: 0 0;
+   }
+ }
+  
+  .form {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    border: 1px solid black;
+    border-radius: 10px;
+    z-index: 10;
+    background-color: white;
+    width: 500px;
+    max-width: 80%;
+  }
+  
+  .form.active {
+    transform: translate(-50%, -50%) scale(1);
+  }
+  
+  .form-header {
+    padding: 10px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid black;
+  }
+  
+  .form-header .title {
+    font-size: 1.25rem;
+    font-weight: bold;
+  }
+  
+  .form-header .close-button {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 1.25rem;
+    font-weight: bold;
+  }
+  
+  .form-section {
+    padding: 10px 15px;
+  }
+  
+  #overlay {
+    position: fixed;
+    opacity: 0;
+    transition: 200ms ease-in-out;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    pointer-events: none;
+  }
+  
+  #overlay.active {
+    opacity: 1;
+    pointer-events: all;
+  }
 
 
-#textArea {
+
+
+
+
+
+/* #textArea {
   background: url(images/notebook.png) repeat-y;
   width: 600px;
   height: 300px;
@@ -342,187 +226,269 @@ body {
   line-height: 25px;
   padding: 2px 10px;
   border: solid 1px #ddd;
-<<<<<<< HEAD
-}
+
+} */
 
 #logo {
+  /* align-items: center;
+   */
+   margin: auto;
+  display: block;
   width: 10%;
   height: auto;
 }
-=======
-<<<<<<< HEAD
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* zen */
+/* 
+        #zen {
+          position: fixed;
+          bottom: 5%;
+          right: 5%;
+          font-size: 20px;
+          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+          Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+          font-weight: bold;
+       
+  
+  max-width: 600px;
+  border: 20px;
+  border-style: solid;
+  border-width: 50px;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+
+  width: 340px;
+  padding: 15px 10px;
+  border: 3px solid #2E94E3;
+  border-radius: 5px;
+  -webkit-box-reflect: below 1px linear-gradient(transparent, rgba(255, 255, 255, 0.1));
+  transition: 0.5s;
+        }
+
+        #zen:hover {
+          background-image: linear-gradient(to right, #054f7d, #00a7cf, #861a54, #054f7d);
+          background-size: 600%;
+          animation-duration: 20s;
+          animation-iteration-count: infinite;
+          animation-name: gradients;
+        } */
+
+/* zen end */
+
+/* brain dump popup box */
+.popup{
+  background-color: rgba(0,0,0,0.5);
+  width: 450px;
+  height: 500px;
+  padding: 30px 40px;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top: 50%;
+  border-radius: 8px;
+  font-family: "Poppins",sans-serif;
+  display: none;
+  text-align: center;
+}
+.popup button{
+  display: block;
+  margin:  0 0 20px auto;
+  background-color: transparent;
+  font-size: 30px;
+  color: #c5c5c5;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.popup p{
+  font-size: 14px;
+  text-align: justify;
+  margin: 20px 0;
+  line-height: 25px;
+}
+a{
+  display: block;
+  width: 150px;
+  position: relative;
+  margin: 10px auto;
+  text-align: center;
+  background-color: #0f72e5;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 5px 0;
+}
+/* brain dump popup box end*/ 
+
+
+
+
+/* envelope -------------------->*/ 
+.letter-image {
+position: absolute;
+top: 50%;
+left: 50%;
+width: 200px;
+height: 200px;
+-webkit-transform: translate(-50%, -50%);
+-moz-transform: translate(-50%, -50%);
+transform: translate(-50%, -50%);
+cursor: pointer;
+}
+.mail {
+position: absolute;
+height: 150px;
+width: 200px;
+-webkit-transition: 0.4s;
+-moz-transition: 0.4s;
+transition: 0.4s;
+}
+.mail .body {
+position: absolute;
+bottom: 0;
+width: 0;
+height: 0;
+border-style: solid;
+border-width: 0 0 100px 200px;
+border-color: transparent transparent #e95f55 transparent;
+z-index: 2;
+}
+.mail .top-fold {
+position: absolute;
+top: 50px;
+width: 0;
+height: 0;
+border-style: solid;
+border-width: 50px 100px 0 100px;
+-webkit-transform-origin: 50% 0%;
+-webkit-transition: transform 0.4s 0.4s, z-index 0.2s 0.4s;
+-moz-transform-origin: 50% 0%;
+-moz-transition: transform 0.4s 0.4s, z-index 0.2s 0.4s;
+transform-origin: 50% 0%;
+transition: transform 0.4s 0.4s, z-index 0.2s 0.4s;
+border-color: #cf4a43 transparent transparent transparent;
+z-index: 2;
+}
+.mail .back-fold {
+position: absolute;
+bottom: 0;
+width: 200px;
+height: 100px;
+background: #cf4a43;
+z-index: 0;
+}
+.mail .left-fold {
+position: absolute;
+bottom: 0;
+width: 0;
+height: 0;
+border-style: solid;
+border-width: 50px 0 50px 100px;
+border-color: transparent transparent transparent #e15349;
+z-index: 2;
+}
+.mail .letter {
+left: 20px;
+bottom: 0px;
+position: absolute;
+width: 160px;
+height: 60px;
+background: white;
+z-index: 1;
+overflow: hidden;
+-webkit-transition: 0.4s 0.2s;
+-moz-transition: 0.4s 0.2s;
+transition: 0.4s 0.2s;
+}
+.mail .letter .letter-border {
+height: 10px;
+width: 100%;
+background: repeating-linear-gradient(-45deg, #cb5a5e, #cb5a5e 8px, transparent 8px, transparent 18px);
+}
+.mail .letter .letter-title {
+margin-top: 10px;
+margin-left: 5px;
+height: 10px;
+width: 40%;
+background: #cb5a5e;
+}
+.mail .letter .letter-context {
+margin-top: 10px;
+margin-left: 5px;
+height: 10px;
+width: 20%;
+background: #cb5a5e;
+}
+.mail .letter .letter-stamp {
+margin-top: 30px;
+margin-left: 120px;
+border-radius: 100%;
+height: 30px;
+width: 30px;
+background: #cb5a5e;
+opacity: 0.3;
+}
+.shadow {
+position: absolute;
+top: 200px;
+left: 50%;
+width: 400px;
+height: 30px;
+transition: 0.4s;
+transform: translateX(-50%);
+-webkit-transition: 0.4s;
+-webkit-transform: translateX(-50%);
+-moz-transition: 0.4s;
+-moz-transform: translateX(-50%);
+border-radius: 100%;
+background: radial-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0));
+}
+.letter-image:hover .mail {
+transform: translateY(50px);
+-webkit-transform: translateY(50px);
+-moz-transform: translateY(50px);
+}
+.letter-image:hover .mail .top-fold {
+transition: transform 0.4s, z-index 0.2s;
+transform: rotateX(180deg);
+-webkit-transition: transform 0.4s, z-index 0.2s;
+-webkit-transform: rotateX(180deg);
+-moz-transition: transform 0.4s, z-index 0.2s;
+-moz-transform: rotateX(180deg);
+z-index: 0;
+}
+.letter-image:hover .mail .letter {
+height: 180px;
+}
+.letter-image:hover .shadow {
+width: 250px;
 }
 
 
+/* envelope -------------------->*/ 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
- body {
-	 width: 100%;
-	 background: url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/grid.png) repeat #fefefe;
-}
- .button {
-	 margin: 40px auto;
-	 font-size: 12px;
-	 font-family: 'Yanone Kaffeesatz', Arial, sans-serif;
-	 text-decoration: none;
-	 text-shadow: 1px 1px 0px #fff;
-	 font-weight: 20;
-	 color: #666;
-	 border: 1px solid #ccc;
-	 cursor: pointer;
-	 padding: 20px 70px 30px;
-	 position: relative;
-	 top: 50px;
-	 background: #eee;
-	 width: 300px;
-	 display: block;
-	 text-align: center;
-	 box-shadow: 1px 1px 1px #fff;
-	 -moz-box-shadow: 1px 1px 1px #fff;
-	 -webkit-box-shadow: 1px 1px 1px #fff;
-	 -moz-border-radius: 5px;
-	 -webkit-border-radius: 5px;
-	 border-radius: 5px;
-	 -moz-transition: all .5s ease-out;
-	 -webkit-transition: all .5s ease-out;
-	 -o-transition: all .5s ease-out;
-	 transition: all .5s ease-out;
-}
- .button:hover {
-	 color: #333;
-	 background: #eeffff;
-	 -moz-transition: all .5s ease-out;
-	 -webkit-transition: all .5s ease-out;
-	 -o-transition: all .5s ease-out;
-	 transition: all .5s ease-out;
-}
- .modalbg {
-	 position: fixed;
-	 font-family: Arial, Helvetica, sans-serif;
-	 top: 0;
-	 right: 0;
-	 bottom: 0;
-	 left: 0;
-	 background: rgba(0,0,0,0);
-	 z-index: 99999;
-	 -moz-transition: all 2s ease-out;
-	 -webkit-transition: all 2s ease-out;
-	 -o-transition: all 2s ease-out;
-	 transition: all 2s ease-out;
-	 -webkit-transition-delay: .2s;
-	 -moz-transition-delay: .2s;
-	 -o-transition-delay: .2s;
-	 -transition-delay: .2s;
-	 display: block;
-	 pointer-events: none;
-}
- .modalbg .dialog {
-	 width: 400px;
-	 position: relative;
-	 top: -1000px;
-	 margin: 10% auto;
-	 padding: 5px 20px 13px 20px;
-	 -moz-border-radius: 10px;
-	 -webkit-border-radius: 10px;
-	 border-radius: 10px;
-	 background: #fff;
-	 background: -moz-linear-gradient(#fff,#ccc);
-	 background: -webkit-linear-gradient(#fff,#ccc);
-	 background: -o-linear-gradient(#fff,#ccc);
-	 box-shadow: 0 0 10px #000;
-	 -moz-box-shadow: 0 0 10px #000;
-	 -webkit-box-shadow: 0 0 10px #000;
-}
- .modalbg .dialog .ie7 {
-	 filter: progid:DXImageTransform.Microsoft.Shadow(color='#000000', Direction=135, Strength=3);
-}
- .modalbg:target {
-	 display: block;
-	 pointer-events: auto;
-	 background: rgba(4,10,30,0.8);
-	 -moz-transition: all .5s ease-out;
-	 -webkit-transition: all .5s ease-out;
-	 -o-transition: all .5s ease-out;
-	 transition: all .5s ease-out;
-}
- .modalbg:target .dialog {
-	 top: -20px;
-	 -moz-transition: all .8s ease-out;
-	 -webkit-transition: all .8s ease-out;
-	 -o-transition: all .8s ease-out;
-	 transition: all .8s ease-out;
-	 -webkit-transition-delay: .4s;
-	 -moz-transition-delay: .4s;
-	 -o-transition-delay: .4s;
-	 -transition-delay: .4s;
-}
- .close {
-	 background: #606061;
-	 color: #FFFFFF;
-	 line-height: 25px;
-	 position: absolute;
-	 right: -12px;
-	 text-align: center;
-	 top: -10px;
-	 width: 24px;
-	 text-decoration: none;
-	 font-weight: bold;
-	 -webkit-border-radius: 12px;
-	 -moz-border-radius: 12px;
-	 border-radius: 12px;
-	 box-shadow: 0 0 10px #000;
-	 -moz-box-shadow: 0 0 10px #000;
-	 -webkit-box-shadow: 0 0 10px #000;
-	 -moz-transition: all .5s ease-out;
-	 -webkit-transition: all .5s ease-out;
-	 -o-transition: all .5s ease-out;
-	 transition: all .5s ease-out;
-	 -webkit-transition-delay: .2s;
-	 -moz-transition-delay: .2s;
-	 -o-transition-delay: .2s;
-	 -transition-delay: .2s;
-}
- .close .ie7 {
-	 filter: progid:DXImageTransform.Microsoft.Shadow(color='#000000', Direction=135, Strength=3);
-}
- .close:hover {
-	 background: #00d9ff;
-	 -moz-transition: all .5s ease-out;
-	 -webkit-transition: all .5s ease-out;
-	 -o-transition: all .5s ease-out;
-	 transition: all .5s ease-out;
-}
- .fineprint {
-	 font-style: italic;
-	 font-size: 10px;
-	 color: #646;
-}
- a {
-	 color: #333;
-	 text-decoration: none;
-}
- 
-=======
-}
->>>>>>> d80a25d11a8db5393c42547ad6892b54fde8cb10
->>>>>>> d332c3ef70173cdafe1c3411c8e0bbe0eba9297a
