--- a/index.css
+++ b/index.css
@@ -6,7 +6,6 @@
 
 body,
 .wrapper {
-  
   background-image: linear-gradient(to right, #054f7d, #00a7cf, #861a54, #054f7d);
   background-size: 600%;
   animation-duration: 20s;
@@ -115,41 +114,18 @@ body,
 
 
 /* brain dump start ----------------->*/
-*, *::after, *::before {
+/* *, *::after, *::before {
     box-sizing: border-box;
-  }
+  } */
 
- section,.wrapper {
+ /* section,.wrap {
     background-image: linear-gradient(to right, #054f7d, #00a7cf, #861a54, #054f7d);
     background-size: 600%;
     animation-duration: 20s;
     animation-iteration-count: infinite;
     animation-name: gradients;
- }
+ } */
 
-  @media (max-width: 830px) {
-   
- }
-  @keyframes gradients {
-    0% {
-      background-position: 0 0;
-   }
-    25% {
-      background-position: 50% 0;
-   }
-    50% {
-      background-position: 90% 0;
-   }
-    60% {
-      background-position: 60%;
-   }
-    75% {
-      background-position: 40%;
-   }
-    100% {
-      background-position: 0 0;
-   }
- }
   
   .form {
     position: fixed;
@@ -195,26 +171,6 @@ body,
     padding: 10px 15px;
   }
   
-  #overlay {
-    position: fixed;
-    opacity: 0;
-    transition: 200ms ease-in-out;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, .5);
-    pointer-events: none;
-  }
-  
-  #overlay.active {
-    opacity: 1;
-    pointer-events: all;
-  }
-
-
-
-
 
 
 
@@ -240,6 +196,97 @@ body,
 
 
 
+
+
+h1 {
+  text-align: center;
+  font-family: Tahoma, Arial, sans-serif;
+  /* color: #06D85F; */
+  margin: 80px 0;
+}
+
+.box {
+  width: 40%;
+  margin: 0 auto;
+  background: rgba(255,255,255,0.2);
+  padding: 35px;
+  border: 2px solid #fff;
+  border-radius: 20px/50px;
+  background-clip: padding-box;
+  text-align: center;
+}
+
+.buttonn {
+  font-size: 1em;
+  /* padding: 10px; */
+  color: #fff;
+  /* border: 2px solid #06D85F; */
+  border-radius: 20px/50px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+}
+.buttonn:hover {
+  background: #06D85F;
+}
+
+.over {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+.over:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.pop {
+  margin: 70px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+
+.pop h2 {
+  margin-top: 0;
+  color: #333;
+  font-family: Tahoma, Arial, sans-serif;
+}
+.pop .closed {
+  position: absolute;
+  /* top: 20px; */
+  right: 30px;
+  transition: all 100ms;
+  font-size: 10px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+.pop .closed:hover {
+  color: #094d6f;
+}
+.pop .content {
+  max-height: 30%;
+  overflow: auto;
+}
+
+@media screen and (max-width: 700px){
+  .box{
+    width: 70%;
+  }
+  .popup{
+    width: 70%;
+  }
+}
 
 
 
@@ -492,3 +539,20 @@ width: 250px;
 /* envelope -------------------->*/ 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          
