--- a/calendar.css
+++ b/calendar.css
@@ -204,7 +204,7 @@ body {
   padding: 20px;
   width: 500px;
   min-height: 200px;
-  display: grid;
+  column-count: 2;
   grid-template-rows: 20px 50px 1fr 50px;
   border-radius: 10px;
   box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
@@ -295,6 +295,5 @@ body {
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-#rightcard {
-  margin-left: 60%;
-}
+
+
