fixed merge conflict pushing to pull

--- a/index.css
+++ b/index.css
@@ -175,7 +175,7 @@ h1 {
   margin: 80px 0;
 }
 
-.box {
+/* .box {
   width: 40%;
   margin: 0 auto;
   background: rgba(255, 255, 255, 0.2);
@@ -184,16 +184,16 @@ h1 {
   border-radius: 20px/50px;
   background-clip: padding-box;
   text-align: center;
-}
+} */
 
-.buttonn {
+/* .buttonn {
   font-size: 1em;
   color: rgb(16, 9, 9);
   border-radius: 20px/50px;
   text-decoration: none;
   cursor: pointer;
   transition: all 0.3s ease-out;
-}
+} */
 
 .buttonn:hover {
   background: linear-gradient(to right, #054F7D, #00A7CF, #861A54, #054F7D);
@@ -468,4 +468,74 @@ a {
 }
 
 /* envelope -------------------->*/
+
+#zen {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 1vw;
+}
+
+.glow-on-hover {
+  height: 50px;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+}
+
+.glow-on-hover:before {
+  content: '';
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  position: absolute;
+  top: -2px;
+  left:-2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+  border-radius: 10px;
+}
+
+.glow-on-hover:active {
+  color: #000
+}
+
+.glow-on-hover:active:after {
+  background: transparent;
+}
+
+.glow-on-hover:hover:before {
+  opacity: 1;
+}
+
+.glow-on-hover:after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* background: #111; */
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+@keyframes glowing {
+  0% { background-position: 0 0; }
+  50% { background-position: 400% 0; }
+  100% { background-position: 0 0; }
+}
+
+#weathericon{
+  width: 100px;
+}
+
 
