--- a/calendar.css
+++ b/calendar.css
@@ -16,7 +16,7 @@ button {
   background-image: none;
   border: 1px solid #000;
   border-radius: 4px;
-  box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+  /* box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px; */
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
@@ -290,10 +290,7 @@ body {
   }
 }
 
-.zen {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
+
 
 
 
